Создал первую версию бота, который может только посылать

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,4 @@
-spring:
-  application:
-    name: TelegaCategories
+bot:
+  name: TelegaCategoriesBot
+  token: 6753913476:AAFqF9UGozmkmfd1diuniExEc_9HnmAZdWg
+  chatId:
