--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,8 +10,14 @@ spring:
       ddl-auto: update
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/tg
+    url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
     password: postgres
+  flyway:
+    enabled: true
+    baseline-on-migrate: true
+    baseline-description: "init"
+    locations: classpath:db/migration
+    default-schema: flyway_schema
 
 
